--- a/templates/actualite.html
+++ b/templates/actualite.html
@@ -4,7 +4,7 @@
 
  <!-- start inner banner -->
  <section class="inner-banner">
-    <h1 class="font-weight-bold text-center">Our Blog</h1>
+    <!-- <h1 class="font-weight-bold text-center">Our Blog</h1> -->
 </section>
 <!-- end inner-banner -->
 <!-- start blog -->
