--- a/templates/formationAgricolt.html
+++ b/templates/formationAgricolt.html
@@ -85,6 +85,10 @@
         </div>
     </section>
     <!-- end achievement -->
+
+    <!-- start result showcase -->
+    {% include 'aller_carte.html' %}
+    <!-- end result showcase -->
     {% endblock %}
 
 
