--- a/templates/actualiteDetails.html
+++ b/templates/actualiteDetails.html
@@ -7,7 +7,7 @@
     
     <!-- start inner banner -->
     <section class="inner-banner">
-        <h1 class="font-weight-bold text-center">Our Blog</h1>
+        <!-- <h1 class="font-weight-bold text-center">Our Blog</h1> -->
     </section>
     <!-- end inner banner -->
     <!-- start blog -->
@@ -30,7 +30,7 @@
                     </div>
                     
                     <div class="share">
-                        <h6 class="text-uppercase font-weight-bold mb-3">Share</h6>
+                        <h6 class="text-uppercase font-weight-bold mb-3">Partager</h6>
                         <ul class="social-icon pl-0">
                             <li>{% post_to_facebook object_or_url " " "fa fa-facebook-f" %}</li>
                             <li>{% post_to_twitter " " object_or_url " "  "fa fa-twitter" %}</li>
@@ -61,13 +61,15 @@
                     <div class="recent-blog ">
                         <h6 class="text-uppercase font-weight-bold mb-3">Articles Recents</h6>
                         {% for ar_recents in articles_recents %}
-                        <div class="media">
-                            <img src="../media/{{ar_recents.img_article}}" alt="John Doe" class="mr-3">
-                            <div class="media-body">
-                                <p class="font-weight-bold mb-2">{{ar_recents.titre}}</p>
-                                <p>Publier le {% language 'fr' %} {{ar_recents.created_at|date:'d F Y'}} {% endlanguage %}</p>
+                        <a href="{% url 'detailsActualite' id=ar_recents.id %}">
+                            <div class="media">
+                                <img src="../media/{{ar_recents.img_article}}" alt="John Doe" class="mr-3">
+                                <div class="media-body">
+                                    <p class="font-weight-bold mb-2">{{ar_recents.titre}}</p>
+                                    <p>Publier le {% language 'fr' %} {{ar_recents.created_at|date:'d F Y'}} {% endlanguage %}</p>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                         {% endfor %}
                         
                     </div>
@@ -77,14 +79,7 @@
         </div>
     </section>
 
-    <div id="fb-root"></div>
-    <script>(function(d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) return;
-    js = d.createElement(s); js.id = id;
-    js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0";
-    fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));</script>
+    
     <!-- end blog -->
     {% endblock %}
 
