--- a/templates/base.html
+++ b/templates/base.html
@@ -5,12 +5,12 @@
     <!-- ========== Meta Tags ========== -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Edusquad - Education Template">
+    <meta name="description" content="Cartographie des établissements fournissant une formation agricole au Sénégal">
     
     <!-- ========== Page Title ========== -->
     <title>FAR</title>
     <!-- ========== Favicon Icon ========== -->
-    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/mesimages/drapeau_senegal.jpg" >
     <!-- ========== Google Fonts ========== -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,800&display=swap" rel="stylesheet">
     <!-- ========== Start Stylesheet ========== -->
