--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img src="{% static 'assets/mesimages/slide1.jpg' %}" alt="education" class="img-fluid">
-                <div class="carousel-caption animated fadeInLeft delay-0.5s">
+                <div class="carousel-caption animated fadeInLeft delay-0.5s d-none d-md-block top-0">
                     <h1 class="font-weight-bold">L'enseignement agricole au Sénégal.</h1>
                     <h6 class="banner-desc">We had such a great time in Education</h6>
                     <a href="{% url 'formationDiplome' %}#trouver_formation" class="theme-orange btn mt-3 apply-now">Trouver une formation</a>
@@ -23,7 +23,7 @@
             </div>
             <div class="carousel-item">
                 <img src="{% static 'assets/mesimages/slide4.jpg'%}" alt="education" class="img-fluid">
-                <div class="carousel-caption animated fadeInUp delay-0.5s">
+                <div class="carousel-caption animated fadeInUp delay-0.5s d-none d-md-block">
                     <h1 class="font-weight-bold">Formez vous aux métiers de l'agriculture.</h1>
                     <h6 class="banner-desc">We had such a great time in Education</h6>
                     <a href="{% url 'formationDiplome' %}#trouver_formation" class="theme-orange btn mt-3 apply-now">Trouver une formation</a>
@@ -31,16 +31,16 @@
             </div>
             <div class="carousel-item">
                 <img src="{% static 'assets/mesimages/slide3.jpg'%}" alt="education" class="img-fluid">
-                <div class="carousel-caption animated fadeInDown delay-0.5s">
-                    <h1 class="font-weight-bold">Une panoplie de formations  et de diplômes à votre disposition.</h1>
+                <div class="carousel-caption animated fadeInDown delay-0.5s d-none d-md-block">
+                    <h1 class="font-weight-bold">Une panoplie de formations à votre disposition.</h1>
                     <h6 class="banner-desc">We had such a great time in Education</h6>
                     <a href="{% url 'formationDiplome' %}#trouver_formation" class="theme-orange btn mt-3 apply-now">Trouver une formation</a>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="{% static 'assets/mesimages/slide5.jpg'%}" alt="education" class="img-fluid">
-                <div class=" partie-titre carousel-caption animated zoomIn delay-0.5s">
-                    <h1 class="font-weight-bold">Donnez-vous la chance de pouvoir évoluer dans l’agriculture.</h1>
+                <div class="carousel-caption animated zoomIn delay-0.5s d-none d-md-block">
+                    <h1 class="font-weight-bold">Donnez-vous la chance d'évoluer dans l’agriculture.</h1>
                     <h6 class="banner-desc">We had such a great time in Education</h6>
                     <a href="{% url 'formationDiplome' %}#trouver_formation" class="theme-orange btn mt-3 apply-now">Trouver une formation</a>
                 </div>
