--- a/templates/detailsEtablissements.html
+++ b/templates/detailsEtablissements.html
@@ -118,7 +118,7 @@
                     </div>    
                     {% endfor %}
                     {% else %}
-                     <div class="w-100 text-center text-danger p-4"><h4>Pas de résultats!</h4></div>
+                     <!-- <div class="w-100 text-center text-danger p-4"><h4>Pas de résultats!</h4></div> -->
                     {%endif%}
             </div>
             
