--- a/templates/detailsFormation.html
+++ b/templates/detailsFormation.html
@@ -18,7 +18,7 @@
                 </div>
             </div>
             <div>
-                <h4>Rappelle de la recherche</h4>
+                <h4>Rappel de la recherche</h4>
                 <ul>
                     {% if request.GET.region%}
                     <li>Région: {{request.GET.region}}</li>
