--- a/templates/form_formation.html
+++ b/templates/form_formation.html
@@ -106,7 +106,7 @@
     
     <!--=====================Dipolome====================-->
     <!--=====================ROW2====================-->
-    <h4 >Diplome</h4>
+    <h4 >Diplôme</h4>
     <div class="row">
         <div class="col-md-6">
             <div class="form-check">
