--- a/templates/lesformations.html
+++ b/templates/lesformations.html
@@ -20,7 +20,7 @@
                 </div>
             </div>
             <div>
-                <h4>Rappelle de la recherche</h4>
+                <h4>Rappel de la recherche</h4>
                 <ul>
                     
                     {% if request.GET.region%}
